ci: add mirror job to Codeberg workflow
- [ci] Add new job `mirror_to_codeberg` (.github/workflows/repo-mirror.yml)
- [ci] Configure job to use `ubuntu-latest` runner (repo-mirror.yml)
- [ci] Add step to checkout code with `fetch-depth: 0` (repo-mirror.yml)
- [ci] Add step to configure git user/email (repo-mirror.yml)
- [ci] Add step to mirror using SSH key from secret (repo-mirror.yml)
- [ci] Implement SSH setup and `git push --force` commands (repo-mirror.yml)

--- a/.github/workflows/repo-mirror.yml
+++ b/.github/workflows/repo-mirror.yml
@@ -51,3 +51,25 @@ jobs:
           ssh-keyscan -t rsa $(echo ${TARGET_URL} | cut -d '@' -f 2 | cut -d ':' -f 1) >> ~/.ssh/known_hosts
           # Push local branches and tags, excluding remote refs
           git push --force ${TARGET_URL} 'refs/heads/*:refs/heads/*' 'refs/tags/*:refs/tags/*' 
+
+  mirror_to_codeberg:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Configure Git
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+      - name: Mirror to Codeberg
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.CODEBERG_SSH_PRIVATE_KEY }}
+          TARGET_URL: ${{ secrets.CODEBERG_REPO_URL }}
+        run: |
+          mkdir -p ~/.ssh
+          echo "${SSH_PRIVATE_KEY}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -t rsa codeberg.org >> ~/.ssh/known_hosts
+          # Push local branches and tags, excluding remote refs
+          git push --force ${TARGET_URL} 'refs/heads/*:refs/heads/*' 'refs/tags/*:refs/tags/*'  
